# noname_gui

./: README.md  README_for_GUI.md
noname/: CHANGELOG.org  Makefile  README.org  TODO.org  explanation.txt  fourmolu.yaml  gui.py  manifest.scm  noname.cabal  processor.py  session.py  test.nn  testy2.nn  tree.py  wrapper.py
noname/app/: Main.hs
noname/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
noname/dist-newstyle/packagedb/ghc-9.6.7/: noname-0.3-inplace.conf  package.cache
noname/examples/bac/: bac.nn  bac_fixed.nn  bac_sequential.nn
noname/examples/basic_hash/: basic_hash.nn  basic_hash_compromise.nn
noname/examples/osk/: osk_0_desynchro.nn
noname/examples/private_authentication/: af.nn  af0.nn  af0_fixed.nn
noname/examples/toys/: betachoice.nn
noname/src/: Noname.hs
noname/src/Noname/: ComposeChecks.hs  Evaluation.hs  Pretty.hs  Reachability.hs  State.hs  Verification.hs
noname/tests/: GoldenTests.hs
noname/tests/golden/: bac.golden  basic_hash_compromise.golden
noname_tool/: .hlint.yaml  CONTRIBUTORS.org  gui.py  noname.cabal  processor.py  session.py  testy.nn  wrapper.py
noname_tool/app/: Main.hs
noname_tool/dist-newstyle/cache/: elaborated-plan  improved-plan  plan.json  source-hashes
noname_tool/dist-newstyle/packagedb/ghc-9.6.7/: noname-0.3-inplace.conf
noname_tool/examples/bac/: bac_parallel.nn
noname_tool/examples/osk/: osk_1_desynchro.nn
noname_tool/examples/runex/: runex.nn  runex_fix_attempt.nn  runex_fixed.nn
noname_tool/examples/toys/: relation.nn
noname_tool/src/Noname/: Analysis.hs  LazyIntruder.hs  NonDetState.hs  Parser.hs  Pretty.hs  Unification.hs
noname_tool/tests/golden/: bac_fixed.golden  osk_0_desynchro.golden  osk_1_desynchro.golden  runex.golden  runex_fix_attempt.golden  runex_fixed.golden
